2011-02-01	Yannick Pavard  <ypavard@infoglobe.ca>

	* Label Changed: "Generated cached" becomes "Statistic page"
	* New menu item: Global Statistics view
	* Language: New help bubble for TYPO3 4.5
	* Changed: Moved the extension after "User" modules instead of bottom and changed to a new icon
	* New option : Hide extensions in list that don't provide xml translation files
	* Changed: Extension configuration support multilingue version (for translator)
	* Fixed: Replace ereg_replace function by preg_replace (compatibility with PHP 5.3, thanks Stefano Kowalke)
	* Added feature: Hide extensions in list without xml file
	* Added feature: Sorting extension list by title or key
	* Changed: (translate files) Update information in selecbox file after save submit
	* Changed: Merge and Export page have their own Select Extension menu
	* Changed: Added CSS for better interface 
	* Changed: Log display hidden in collapsable menu
	* Changed: Bigger textarea for translation.
	* Language: LLXML is now fully translatable
	* Charset: Module forces UTF-8 charset to diminish encoding problem (just when using LLXML)

2008-05-09	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed: warning in mod1/class.sc.php if no subdirectories in the directory

2007-12-06	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug: external autogenerated file is ignored when saving results if original file has any information about translation

2007-12-06	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug: external autogenerated file is ignored if source file is read-only and has translations in it
	* Added feature: display extension version in extension selector
	* External files now have priority over files in extension or local translations. This is required for proper translation process
	* Fixed CLI script work